--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <div class="call_text"><a href="#"><img src="images/call-icon.png"><span class="call_text_left">+01 1234567890</span></a></div>
                 </div>
                 <div class="contact_right">
-                  <div class="call_text">Make an appointment</div>
+                  <div class="call_text">otra frase</div>
                 </div>
               </div>
             </div>
@@ -414,3 +414,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    </body>
 
    </html>
+
